add api delete snapshot
